[package]
name = "conet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dotenv = "0.15.0"
hound = "3.5.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"]}
serde_json = "1.0.64"
tokio = { version = "1.29.1", features = ["full"] }
tts = "0.25.5"
tts_rust = "0.3.5"
