[package]
name = "conetto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
base64 = "0.21.2"
hound = "3.5.0"
lowpass-filter = "0.3.2"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.64"
spellabet = "0.2.0"
tokio = { version = "1.29.1", features = ["full"] }
